@@ -25,10 +25,10 @@ TCL_DDE_MINOR_VERSION=3
 TCL_DDE_PATCH_LEVEL="2"
 DDEVER=$TCL_DDE_MAJOR_VERSION$TCL_DDE_MINOR_VERSION
 
-TCL_REG_VERSION=1.1
+TCL_REG_VERSION=1.2
 TCL_REG_MAJOR_VERSION=1
-TCL_REG_MINOR_VERSION=1
-TCL_REG_PATCH_LEVEL="6"
+TCL_REG_MINOR_VERSION=2
+TCL_REG_PATCH_LEVEL=""
 REGVER=$TCL_REG_MAJOR_VERSION$TCL_REG_MINOR_VERSION
 
 #------------------------------------------------------------------------
